Favoring `Map.of` over `Collections.singletonMap`.